--- a/etch-a-sketch/css.css
+++ b/etch-a-sketch/css.css
@@ -78,7 +78,16 @@ button.setting {
 }
 
 #display {
+    display: flex;
+    flex-direction: column;
     background: #d3d3d3;
     width: 700px;
     height: 400px;
+    gap: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+
+.row {
+    display: flex;
 }
